# egp-stores

./: .coveragerc  .gitignore  .gitmodules  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
egp_genomic_library/: conversions.py  entry_validator.py  gc_type.py  genetic_material_store.py  genomic_library.py  gl_entry_validator.py  gl_json_entry_validator.py  gms_entry_validator.py
egp_genomic_library/data/: array_functions.sql  codons.json  gc_types.json  gl_functions.sql
egp_genomic_library/formats/: entry_format.json  gl_entry_format.json  gl_json_entry_format.json  gl_table_format.json  gms_entry_format.json  gms_table_format.json  meta_table_format.json  table_format.json
egp_stores/: __init__.py  egp_typing.py  gene_pool.py  gene_pool_cache.py  gene_pool_cache_graph.py  gene_pool_common.py  gene_pool_table_schema.py  genetic_material_store.py  genomic_library.py  typing.py
egp_stores/data/: codons.json  gl_functions.sql
egp_stores/formats/: gl_table_format.json  gms_table_format.json  gp_config_format.json  gp_meta_table_format.json  gp_metric_table_format.json  gp_pgc_metrics_table_format.json  gp_pgc_probabilities_table_format.json  gp_population_metrics_table_format.json  gp_population_table_format.json  (+3 more)
genomic_library/: __init__.py  entry_validator.py  gc_type.py  genomic_library.py
tests/: __init__.py  test_code_quality.py  test_gene_pool.py  test_gene_pool_cache.py  test_genetic_material_store.py  test_genomic_library.py  test_sql_array_update.py  test_sql_functions.py
(+5 files in other folders)
